Update front page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <h1>Front Page</h1>
+    <h1 style="color: blue ; text-align: center;">1st Microverse Assignment Front Page</h1>
     <div class="videowrapper">
       <iframe src="https://www.youtube.com/embed/V74l_zS1x8E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
